adds Pavaan and Rory to authors, cleans up ch2

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,3 @@
 Michael Hausenblas, https://twitter.com/mhausenblas
+Pavaan Mistry, https://twitter.com/98pm
+Rory McCune, https://twitter.com/raesene
